<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|left"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fullNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name_tv"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name_pt_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/middle_name_pt_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name_pt_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/homeAddressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/home_address_tv"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/HouseNumberEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="100dp"
                android:ems="10"
                android:hint="@string/house_num_pt_hint"
                android:inputType="text"
                android:textAlignment="center"
                android:textStyle="italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/streetNameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:hint="@string/street_name_pt_hint"
                android:inputType="text"
                android:textAlignment="center"
                android:textStyle="italic"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <EditText
            android:id="@+id/subdivisionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/subdivision_housing_name_pt_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/cityNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/city_name_pt_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/countryNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/country_name_pt_hint"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/notesTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notes_tv"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/commentsEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/comment_notes_pt_hint"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom|right"
                android:orientation="horizontal">

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#D3D3D3"
                    android:text="@string/back_button_label"
                    android:textColor="#000000"
                    app:cornerRadius="0dp" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:width="20dp"
                    android:backgroundTint="#D1F3BC"
                    android:text="@string/save_button_label"
                    android:textColor="#000000"
                    app:cornerRadius="0dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>